# neural-oracle

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: app.py  config.py  dependencies.py  models.py  router.py  security.py
app/llm/: __init__.py  base.py  gemini.py  openrouter.py
app/repository/: __init__.py  base.py  sqlite.py
scripts/: cli.py
static/: auth.html  index.html  script.js  style.css
